--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -28,8 +28,8 @@ button {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 80vw;
-  float: left;
+  width: 100vw;
+  /* float: left; */
 }
 
 /* Header */
